--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}    
+          images: ghcr.io/${{ toLower(github.repository) }}
 
       - name: Build and push docker containers
         uses: docker/build-push-action@v6
@@ -34,5 +34,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
-      
+            ghcr.io/${{ toLower(github.repository) }}:latest      
