--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}.toLowerCase()
+          images: ghcr.io/${{ github.repository }}
 
       - name: Build and push docker containers
         uses: docker/build-push-action@v6
@@ -34,4 +34,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}.toLowerCase():latest      
+            ${{ steps.meta.outputs.tags }}:latest      
